[tool.poetry]
name = "sarb-data"
version = "0.1.0"
description = ""
authors = ["Riaan Vermeulen <wa.vermeulen@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
requests = "^2.32.3"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
