[tool.poetry]
name = "sarb-api"
version = "0.1.0"
description = ""
authors = ["Riaan Vermeulen <wa.vermeulen@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
requests = "^2.32.3"
streamlit = "^1.41.1"
streamlit-option-menu = "^0.4.0"

[tool.poetry.scripts]
app = "sarb_api.scripts.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
